 Fix Bug 15251: REGRESSION: <input type=range> doesn't respond to form.reset() or setting input.value

WebCore:

         Fix Bug 15251: REGRESSION: <input type=range> doesn't respond to form.reset() or setting input.value

         http://bugs.webkit.org/show_bug.cgi?id=15251
         <rdar://5498169>

         Reviewed by Maciej.

         Test: fast/forms/range-reset.html

         * html/HTMLInputElement.cpp:
         (WebCore::HTMLInputElement::storesValueSeparateFromAttribute): <input
         type=range> should be storing its value separately from the value
         attribute, as do all of our variable-input input types.

 LayoutTests:

         Test for Bug 15251: REGRESSION: <input type=range> doesn't respond to form.reset() or setting input.value

         http://bugs.webkit.org/show_bug.cgi?id=15251
         <rdar://5498169>

         Reviewed by Maciej.

         * fast/forms/range-reset-expected.txt: Added.
         * fast/forms/range-reset.html: Added.


Canonical link: https://commits.webkit.org/20157@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25701 268f45cc-cd09-0410-ab3c-d52691b4dbfc